@@ -1,5 +1,7 @@
 *SVN*
 
+* catch possible WSOD when trying to render a missing partial. Closes #8454 [Catfish]
+
 * Rewind request body after reading it, if possible.  #8438 [s450r1]
 
 * Resource namespaces are inherited by their has_many subresources.  #8280 [marclove, ggarside]
